# isekai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: publish.yml  test.yml
isekai/: admin.py  extractors.py  graphs.py  loaders.py  miners.py  models.py  operations.py  pipelines.py  seeders.py  types.py  utils.py
isekai/contrib/wagtail/: __init__.py  loaders.py
isekai/management/commands/: extract.py  isekai.py  load.py  mine.py  seed.py  transform.py
isekai/operations/: __init__.py  extract.py  load.py  mine.py  seed.py  transform.py
isekai/utils/: __init__.py  pipeline.py  progress.py
src/isekai/: models.py
tests/: conftest.py  settings.py  settings_mysql.py  test_extractors.py  test_graphs.py  test_loaders.py  test_miners.py  test_models.py  test_seeders.py  test_transformers.py  test_types.py  test_utils.py
tests/cassettes/test_extractors/: TestExtract.test_extract_cannot_proceed_if_no_data.yaml  TestExtract.test_extract_loads_data_to_resource.yaml  TestHTTPExtractor.test_extract_returns_resource_data.yaml
tests/contrib/: test_wagtail.py
tests/files/: test_data.csv
tests/testapp/: models.py
tests/testapp/migrations/: 0006_alter_concreteresource_key_and_more.py
